# CYVL-Servant

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/commands/: briefing.md  replies.md  scan-events.md  tasks.md  triage.md
auth/: google_auth.py
briefing/: actions.py  morning_briefing.py  tasks.py  triage.py
mcp_servers/: calendar_server.py  gmail_server.py
sources/: base.py  gmail.py  google_calendar.py  notion.py
web/: app.py
web/templates/: index.html
